course_materials/M3-Solution-Security-and-Policies/np-cons.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-cons
spec:
  podSelector:
    matchLabels:
      role: consumer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: client
